[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Gr√°ficos/BG.png" type="Texture" id=1]
[ext_resource path="res://Assets/Prefabs/Ball/Ball2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Prefabs/Bricks/BrickRed2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Prefabs/Bricks/BrickBlue2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Prefabs/Player/Player2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Prefabs/Bricks/Pared1.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Prefabs/Bricks/Pared4.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/font/02.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/Scenes/GameManager.gd" type="Script" id=9]
[ext_resource path="res://Assets/font/01.tres" type="DynamicFont" id=10]
[ext_resource path="res://Assets/sounds/POL-dragon-story-short.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Prefabs/Bricks/BrickGreen2D.tscn" type="PackedScene" id=14]

[node name="Level012D" type="Node2D"]

[node name="Backgound1" type="Sprite" parent="."]
position = Vector2( 511.751, 299.742 )
scale = Vector2( 1.05, 1.05 )
z_index = -6
texture = ExtResource( 1 )

[node name="Player2D" parent="." instance=ExtResource( 5 )]
pause_mode = 2
position = Vector2( 520.752, 574.798 )

[node name="Ball2D" parent="." instance=ExtResource( 2 )]
pause_mode = 1
Offset = Vector2( 1, 1 )
Inpulse = Vector2( 100, -250 )
Walls = "Walls"

[node name="limites" type="Node" parent="."]

[node name="Pared1" parent="limites" instance=ExtResource( 6 )]
position = Vector2( 147.101, 273 )
rotation = -0.174533
scale = Vector2( 1, 1.203 )
z_index = -1

[node name="Pared2" parent="limites" instance=ExtResource( 6 )]
position = Vector2( 888.91, 273.243 )
rotation = -2.96706
scale = Vector2( 0.990041, 1.20263 )
z_index = -1

[node name="Pared3" parent="limites" instance=ExtResource( 6 )]
position = Vector2( 520, 19 )
rotation = 1.5708
scale = Vector2( 1, 1.848 )
z_index = -1

[node name="Pared4" parent="limites" instance=ExtResource( 7 )]
position = Vector2( 508.162, 613.57 )
rotation = -0.00639572
scale = Vector2( 2.07505, 0.932249 )
z_index = -1

[node name="Bricks" type="Node" parent="." groups=[
"Bricks",
]]

[node name="Red" type="Node" parent="Bricks"]

[node name="BrickRed2D12" parent="Bricks/Red" groups=[
"Red",
] instance=ExtResource( 3 )]
position = Vector2( 396.593, 180.323 )
z_index = -1

[node name="BrickRed2D11" parent="Bricks/Red" groups=[
"Red",
] instance=ExtResource( 3 )]
position = Vector2( 397.791, 229.227 )
z_index = -1

[node name="BrickRed2D10" parent="Bricks/Red" groups=[
"Red",
] instance=ExtResource( 3 )]
position = Vector2( 546.193, 234.527 )
z_index = -1

[node name="BrickRed2D" parent="Bricks/Red" groups=[
"Red",
] instance=ExtResource( 3 )]
position = Vector2( 238.789, 112.625 )
z_index = -1

[node name="BrickRed2D6" parent="Bricks/Red" groups=[
"Red",
] instance=ExtResource( 3 )]
position = Vector2( 548.843, 178.876 )
z_index = -1

[node name="BrickRed2D5" parent="Bricks/Red" groups=[
"Red",
] instance=ExtResource( 3 )]
position = Vector2( 707.845, 181.526 )
z_index = -1

[node name="BrickRed2D8" parent="Bricks/Red" groups=[
"Red",
] instance=ExtResource( 3 )]
position = Vector2( 243.026, 170.926 )
z_index = -1

[node name="BrickRed2D4" parent="Bricks/Red" groups=[
"Red",
] instance=ExtResource( 3 )]
position = Vector2( 546.193, 120.575 )
z_index = -1

[node name="Blue" type="Node" parent="Bricks"]

[node name="BrickBlue2D" parent="Bricks/Blue" instance=ExtResource( 4 )]
position = Vector2( 315.64, 115.275 )
z_index = -1
mode = 0
physics_material_override = null
script = null

[node name="BrickBlue2D2" parent="Bricks/Blue" instance=ExtResource( 4 )]
position = Vector2( 469.342, 123.225 )
z_index = -1
mode = 0
physics_material_override = null
script = null

[node name="BrickBlue2D4" parent="Bricks/Blue" instance=ExtResource( 4 )]
position = Vector2( 623.044, 123.225 )
z_index = -1
mode = 0
physics_material_override = null
script = null

[node name="BrickBlue2D3" parent="Bricks/Blue" instance=ExtResource( 4 )]
position = Vector2( 776.746, 131.175 )
z_index = -1
mode = 0
physics_material_override = null
script = null

[node name="BrickBlue2D8" parent="Bricks/Blue" instance=ExtResource( 4 )]
position = Vector2( 318.29, 173.576 )
z_index = -1
mode = 0
physics_material_override = null
script = null

[node name="BrickBlue2D7" parent="Bricks/Blue" instance=ExtResource( 4 )]
position = Vector2( 471.992, 181.526 )
z_index = -1
mode = 0
physics_material_override = null
script = null

[node name="BrickBlue2D6" parent="Bricks/Blue" instance=ExtResource( 4 )]
position = Vector2( 625.694, 181.526 )
z_index = -1
mode = 0
physics_material_override = null
script = null

[node name="BrickBlue2D5" parent="Bricks/Blue" instance=ExtResource( 4 )]
position = Vector2( 779.396, 189.476 )
z_index = -1
mode = 0
physics_material_override = null
script = null

[node name="BrickBlue2D12" parent="Bricks/Blue" instance=ExtResource( 4 )]
position = Vector2( 315.64, 229.227 )
z_index = -1
mode = 0
physics_material_override = null
script = null

[node name="BrickBlue2D11" parent="Bricks/Blue" instance=ExtResource( 4 )]
position = Vector2( 469.342, 237.177 )
z_index = -1
mode = 0
physics_material_override = null
script = null

[node name="BrickBlue2D10" parent="Bricks/Blue" instance=ExtResource( 4 )]
position = Vector2( 623.044, 237.177 )
z_index = -1
mode = 0
physics_material_override = null
script = null

[node name="BrickBlue2D9" parent="Bricks/Blue" instance=ExtResource( 4 )]
position = Vector2( 776.746, 245.127 )
z_index = -1
mode = 0
physics_material_override = null
script = null

[node name="Green" type="Node" parent="Bricks"]

[node name="BricGreen2D" parent="Bricks/Green" instance=ExtResource( 14 )]
position = Vector2( 398.59, 114.272 )

[node name="BricGreen2D2" parent="Bricks/Green" instance=ExtResource( 14 )]
position = Vector2( 701.954, 127.875 )

[node name="BricGreen2D4" parent="Bricks/Green" instance=ExtResource( 14 )]
position = Vector2( 233.985, 225.822 )

[node name="BricGreen2D3" parent="Bricks/Green" instance=ExtResource( 14 )]
position = Vector2( 703.314, 235.345 )

[node name="GameManager" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 9 )
MaxCount = 520
Score = "Puntos: "
Lives = 5
Ground = "Piso"
StartPosition = Vector2( 503, 543 )

[node name="HBox" type="HBoxContainer" parent="GameManager"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_right = 320.0
margin_bottom = 40.0
custom_constants/separation = 330
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="GameManager/HBox"]
margin_left = 23.0
margin_top = 5.0
margin_right = 177.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.368627, 0.368627, 0.368627, 1 )
text = "Score 000"
align = 1
valign = 1

[node name="LivesLabel" type="Label" parent="GameManager/HBox"]
margin_left = 507.0
margin_top = 5.0
margin_right = 617.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.368627, 0.368627, 0.368627, 1 )
text = "Lives: 0"
align = 1
valign = 1

[node name="VBox" type="VBoxContainer" parent="GameManager"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -20.0
margin_right = 325.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerdisteLabel" type="Label" parent="GameManager/VBox"]
margin_right = 650.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Perdiste!"
align = 1
valign = 1

[node name="QuitLabel" type="Label" parent="GameManager/VBox"]
margin_top = 54.0
margin_right = 650.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press \"r\" to Restart"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="GameManager"]
wait_time = 3.0
one_shot = true

[node name="AudioBackground" type="AudioStreamPlayer" parent="GameManager"]
pause_mode = 2
stream = ExtResource( 11 )
volume_db = -15.0
mix_target = 2
[connection signal="body_entered" from="Ball2D" to="GameManager" method="_on_Ball2D_body_entered"]
[connection signal="timeout" from="GameManager/Timer" to="GameManager" method="_on_Timer_timeout"]
